--- a/styles/globals.css
+++ b/styles/globals.css
@@ -150,6 +150,25 @@ body {
   z-index: -1;
 }
 
+.howIoPledgeBg {
+  position: relative;
+}
+
+.howIoPledgeBg::before {
+  content: "";
+  background-image: url("/images/how-it-pledge.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  filter: brightness(30%);
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
 @layer components {
   .container {
     @apply max-w-full w-[1440px] mx-auto;
